# rusty-pipe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/: main.py
tests/: test_main.py
