[project]
name = "sample-pipeline"
version = "0.1.0"
description = "A sample Python project demonstrating a full GitHub Actions CI/CD pipeline using uv and Rust-based tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.40.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E, W: pycodestyle
# F: pyflakes
# I: isort
# D: pydocstyle
# PL: pylint
select = ["E", "F", "W", "I", "D", "PL"]

# Ignore missing docstrings in modules/packages for simplicity in this sample
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
